# BioStructBenchmark

./: .coverage  .gitignore  20250811BSBstatus.txt  Architecture.txt  Dockerfile.curves  GAP_TOLERANT_ALGORITHM_RESULTS.md  LICENSE  MANUAL_VERIFICATION_GUIDE.md  PRODUCTION_OUTPUT_VERIFICATION.md  README.md  REAL_DATA_BATCH_ANALYSIS_RESULTS.md  alignment_demo.py  batch_analysis_log.txt  biostructbenchmark-fix.py  comprehensive_test.py  debug_alignment.py  fix-imports-script.py  install_curves_plus.sh  production_output_tests.py  pyproject.toml  real_data_batch_analysis.py  setup_dssr.sh  test_alignment_fix.py  test_core_analysis_integration.py  test_core_integration.py  test_dna_p_alignment.py  test_improved_alignment.py
.github/ISSUE_TEMPLATE/: feature_request.md  task-request.md
.github/workflows/: run_tests.yml
alignment_outputs/: p456_full_alignment_per_chain_rmsd.csv  p456_full_alignment_per_residue_rmsd.csv  p456_full_alignment_summary.txt  p456_protein_alignment_per_residue_rmsd.csv  p456_protein_alignment_summary.txt
alignment_outputs_comprehensive/: center_of_mass_full_structure_per_chain_rmsd.csv  center_of_mass_full_structure_per_residue_rmsd.csv  center_of_mass_full_structure_summary.txt  dna_aligned_dna_only_per_chain_rmsd.csv  dna_aligned_dna_only_per_residue_rmsd.csv  dna_aligned_dna_only_summary.txt  dna_aligned_full_structure_per_chain_rmsd.csv  dna_aligned_full_structure_per_residue_rmsd.csv  dna_aligned_full_structure_summary.txt  kabsch_dna_backbone_full_structure_per_chain_rmsd.csv  kabsch_dna_backbone_full_structure_per_residue_rmsd.csv  kabsch_dna_backbone_full_structure_summary.txt  kabsch_full_backbone_full_structure_per_chain_rmsd.csv  kabsch_full_backbone_full_structure_per_residue_rmsd.csv  kabsch_full_backbone_full_structure_summary.txt  kabsch_protein_backbone_full_structure_per_chain_rmsd.csv  kabsch_protein_backbone_full_structure_per_residue_rmsd.csv  kabsch_protein_backbone_full_structure_summary.txt  protein_aligned_full_structure_per_chain_rmsd.csv  protein_aligned_full_structure_per_residue_rmsd.csv  protein_aligned_full_structure_summary.txt  protein_aligned_protein_only_per_residue_rmsd.csv  protein_aligned_protein_only_summary.txt
alignment_outputs_test/: test_alignment_per_chain_rmsd.csv  test_alignment_per_residue_rmsd.csv  test_alignment_summary.txt
biostructbenchmark/: .coverage  __init__.py  __main__.py  cli.py  pyproject.toml
biostructbenchmark/analysis/: __init__.py  bfactor.py  consensus.py  curves.py  dssr.py  hbond.py  mutations.py  pca.py  secondary.py
biostructbenchmark/core/: __init__.py  alignment.py  alignment_backup.py  curves_visualization.py  io.py  metrics.py
biostructbenchmark/tests/: comprehensive_tests.py  test_alignment.py  test_metrics.py  test_parser_management.py  test_visualization.py
biostructbenchmark/tests/data/: invalid.cif
biostructbenchmark/visualization/: __init__.py  __init__.py.backup  curves_plots.py  pca_plots.py  plots.py.backup  residue_plots.py  structure.py
dna_p_alignment_test/: dna_centric_alignment_per_chain_rmsd.csv  dna_centric_alignment_per_residue_rmsd.csv  dna_centric_alignment_summary.txt  dna_p_atom_alignment_per_chain_rmsd.csv  dna_p_atom_alignment_per_residue_rmsd.csv  dna_p_atom_alignment_summary.txt  global_alignment_per_chain_rmsd.csv  global_alignment_per_residue_rmsd.csv  global_alignment_summary.txt  protein_centric_alignment_per_chain_rmsd.csv  protein_centric_alignment_per_residue_rmsd.csv  protein_centric_alignment_summary.txt
test_core_outputs/: integration_test_per_residue_rmsd.csv  integration_test_summary.txt
test_outputs/comprehensive_test_report/: test_report.json  test_report.txt
tests/: advanced_integration_test.py  comprehensive_tests.py  dependency_test.py  test_alignment.py  test_alignment_comprehensive.py  test_alignment_fix.py  test_cli.py  test_cli_integration.py  test_core_analysis_basic.py  test_core_integration_final.py  test_curves_setup.py  test_dssr_integration.py  test_integration_comprehensive.py  test_io.py  test_metrics.py  test_multi_frame.py  test_parser_management.py  test_pca_integration.py
tests/data/: 1bom.cif
tests/data/proteins_cif/: 2r4g.cif
tests/demos/: comprehensive_alignment_demo.py
tests/outputs/batch_analysis/: batch_analysis_summary.csv  batch_statistics.json
tests/outputs/batch_analysis/1bom_analysis/: 1bom_detailed_analysis.json
tests/outputs/batch_analysis/p456_02_analysis/: p456_02_detailed_analysis.json
tests/outputs/comprehensive_reports/: analysis_summary.html  executive_summary.json  output_inventory.json  technical_report.json
tests/outputs/publication_plots/structure_report/: summary.json
tests/outputs/single_structure_analysis/: comprehensive_analysis.json  rmsd_dna_centric.csv  rmsd_global.csv  rmsd_protein_centric.csv
tests/outputs/test_core_analysis_outputs/: bfactor_analysis.csv  consensus_errors.csv  core_analysis_test_per_chain_rmsd.csv  core_analysis_test_per_unit_rmsd.csv  integration_summary.txt  secondary_structure_comparison.csv
tests/outputs/test_core_outputs/: integration_test_per_unit_rmsd.csv  integration_test_residue_rmsds.csv
tests/outputs/test_final_integration_outputs/: final_test_metrics.csv  final_test_per_unit_rmsd.csv  final_test_residue_rmsds.csv
tests/outputs/test_pca_outputs/: pca_analysis_report.txt  residue_pca_outliers.csv  residue_pca_summary.csv  structure_pca_loadings.csv  structure_pca_outliers.csv  structure_pca_scores.csv  structure_pca_summary.csv
tests/predicted_alphafold3/: p456_02_predicted.cif
