[project]
name = "BioStructBenchmark"
version = "0.0.1"
authors = [
    { name="Delta Kapp", email="deltakapp@gmail.com"},
    { name="Morgan Esler", email="mesler1397@gmail.com"}
]
description = "A tool for analyzing protein-nucleic acid complexes"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE"}


[project.urls]
"Homepage" = "https://github.com/BioStructBenchmark/BioStructBenchmark"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
