[project]
name = "BioStructBenchmark"
version = "0.0.1"
description = "A tool for analyzing protein-nucleic acid complexes"
authors = [
    { name="Delta Kapp", email="deltakapp@gmail.com"},
    { name="Morgan Esler", email="mesler1397@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.8.0"  # Changed from 3.13.0 to 3.8.0 for broad compatibility
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython>=1.85",
    "numpy>=1.21.0",  # Lowered from 2.3.1 for Python 3.8 compatibility
    "pandas>=1.3.0",        # Added for CURVES+ analysis
    "matplotlib>=3.5.0",    # Added for visualization
    "seaborn>=0.11.0",      # Added for statistical plots
    "networkx>=2.6",        # Added for H-bond networks
    "scipy>=1.7.0"          # Added for scientific computing
]

[project.urls]
"Homepage" = "https://github.com/BioStructBenchmark/BioStructBenchmark"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
lint = [
    "black>=22.0.0",
    "pylint>=2.15.0",
    "isort>=5.10.0"
]
dev = [
    "biostructbenchmark[test,lint]",
    "twine>=4.0.0"    
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "."
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88